# maplab_lightweight_filtering

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
cmake/: FindLWF.cmake
include/: CoordinateTransform.hpp  EKF.hpp  FilterBase.hpp  FilterState.hpp  Image.hpp  ModelBase.hpp  OutlierDetection.hpp  Prediction.hpp  PredictionModel.hpp  PropertyHandler.hpp  SigmaPoints.hpp  State.hpp  TestClasses.hpp  UKF.hpp  Update.hpp
include/lightweight_filtering/: CoordinateTransform.hpp  FilterBase.hpp  FilterState.hpp  GIFPrediction.hpp  ModelBase.hpp  OutlierDetection.hpp  Prediction.hpp  PropertyHandler.hpp  SigmaPoints.hpp  State.hpp  TestClasses.hpp  Update.hpp  common.hpp
src/: testFilterBase.cpp  testGIFPrediction.cpp  testModelBase.cpp  testPrediction.cpp  testPredictionModel.cpp  testSigmaPoints.cpp  testState.cpp  testUKF.cpp  testUpdate.cpp
